ingresses/prod/wedding-admin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-admin
  namespace: wedding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: admin.karenandlucas.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-admin
                port:
                  number: 80
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - admin.karenandlucas.com
      secretName: wedding-admin-tls
