ingresses/prod/wedding-guest-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-guest
  namespace: wedding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: www.karenandlucas.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-guest
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: karenandlucas.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-guest
                port:
                  number: 80
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - www.karenandlucas.com
        - karenandlucas.com
      secretName: wedding-tls
